--- a/enjoyapp/tpls/loginForm.html
+++ b/enjoyapp/tpls/loginForm.html
@@ -35,3 +35,36 @@
         </div>
     </div>
 </div>
+
+
+<div class="panel panel-primary">
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="text-center">图书馆管理系统</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <form action="" role="form">
+                    <div class="form-group">
+                        <label class="col-md-2 control-lable">
+                            用户名：
+                        </label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" placeholder="邮箱密码" ng-model="userInfo.email" >
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <lable class="col-md-2 control-lable">
+                            密码：
+                        </lable>
+                        <div class="col-md-10">
+                            <input type="password" class="form-control" placeholder="" ng-model="userInfo.password">
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
